# tenet

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  METRICS_IMPLEMENTATION.md  README.md  build.rs  requirements.txt  simulate.py  simulation.py
android/: .gitignore  build.sh
android/app/: build.gradle.kts  settings.gradle.kts
android/app/app/: build.gradle.kts
android/app/app/src/main/: AndroidManifest.xml
android/app/app/src/main/java/com/example/tenet/: MainActivity.kt  TenetApplication.kt
android/app/app/src/main/java/com/example/tenet/data/: KeystoreManager.kt  SyncWorker.kt  TenetPreferences.kt  TenetRepository.kt
android/app/app/src/main/java/com/example/tenet/theme/: Theme.kt
android/app/app/src/main/java/com/example/tenet/ui/: TenetNavHost.kt
android/app/app/src/test/java/com/example/tenet/: DeepLinkParserTest.kt
android/app/app/src/test/java/com/example/tenet/data/: KeystoreManagerTest.kt  SyncWorkerNotificationTest.kt
android/app/gradle/: libs.versions.toml
android/tenet-ffi/: Cargo.toml  build.rs
android/tenet-ffi/src/: lib.rs  tenet_ffi.udl  types.rs
deprecated/python/: tenet_crypto.py  test_crypto.py
docs/: EVENT_BASED_SIM.md  PLAN.md  REVIEW.md  WEBUI_SUMMARY.md  add_peer_flow.md  architecture.md  attachment_v2_plan.md  client_managed_storage.md  debugger.md  debugger_plan.md  friend_posts.md  friend_requests.md  geo_post.md  group_invite_plan.md  groups.md  mvp.md  public_mesh_plan.md  public_payload_fix.md  relay.md  relay_qos.md  simulation.md  to_check_later.md  todo.md
docs/clients/: android.md  cli.md  debugger.md  howto.md  identity.md  web.md
docs/flows/: 01-add-friend.md  02-peer-reconnect.md  03-direct-message.md  04-store-and-forward.md  05-public-message.md  06-attachment.md  07-mesh-distribution.md  08-peer-discovery.md  09-profile-updates.md  10-group-create-invite.md  11-group-message.md  12-reactions-replies.md  13-relay-websocket.md  README.md
docs/sim/: scenarios.md  simulation.md
scenarios/: degraded_network.toml  friend_discovery.toml  geo_messages_test.toml  group_messages_test.toml  large_clustered_100.toml  mesh_catchup_test.toml  public_messages_test.toml  reply_chains.toml  small_dense_6.toml  store_and_forward_3.toml
src/: client.rs  crypto.rs  geo.rs  groups.rs  identity.rs  lib.rs  logging.rs  main.rs  message_handler.rs  protocol.rs  relay.rs  relay_transport.rs  simulation.rs  storage.rs
src/simulation/: client.rs  config.rs  event.rs  metrics.rs  mod.rs  random.rs  scenario.rs
src/web_client/: CLAUDE.md  config.rs  mod.rs  router.rs  state.rs  static_files.rs  sync.rs  utils.rs
src/web_client/handlers/: attachments.rs  conversations.rs  friends.rs  group_invites.rs  groups.rs  health.rs  messages.rs  mod.rs  notifications.rs  peers.rs  profiles.rs  qr.rs  reactions.rs  replies.rs  settings.rs  websocket.rs
tenet/: hash.py  message.py  peer.py  protocol.rs  settings.py  simulation.py  sync_sketch.py  utils.py
tenet/tests/: test_message.py  test_peer.py
tests/: attachment_v2_tests.rs  client_sync_tests.rs  crypto_tests.rs  protocol_tests.rs  relay_tests.rs  simulation_client_tests.rs  simulation_harness_tests.rs
web/src/: app.js  index.html  relay_dashboard.html  styles.css
(+28 files in other folders)
