[package]
name = "tenet-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
chacha20poly1305 = { version = "0.10", features = ["std"] }
axum = "0.7"
crossterm = "0.27"
hex = "0.4"
hpke = "0.11"
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
ratatui = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "sync", "time"] }
toml = "0.8"
ureq = { version = "2.10", features = ["json", "tls"] }
