[workspace]
members = [
    ".",
    "android/tenet-ffi",
]

[package]
name = "tenet"
version = "0.1.0"
edition = "2021"

[lib]
name = "tenet"

[[bin]]
name = "tenet"
path = "src/bin/tenet-crypto.rs"

[[bin]]
name = "tenet-sim"
path = "src/bin/simulation.rs"

[[bin]]
name = "tenet-debugger"
path = "src/bin/debugger.rs"

[[bin]]
name = "tenet-relay"
path = "src/bin/relay.rs"

[[bin]]
name = "tenet-web"
path = "src/bin/tenet-web.rs"

[dependencies]
base64 = "0.22"
chacha20poly1305 = { version = "0.10", features = ["std"] }
axum = { version = "0.7", features = ["ws"] }
crossterm = "0.27"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
hex = "0.4"
hpke = "0.11"
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
ratatui = "0.26"
rustyline = "14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "sync", "time"] }
toml = "0.8"
rust-embed = "8"
rusqlite = { version = "0.31", features = ["bundled"] }
tower-http = { version = "0.5", features = ["set-header"] }
mime_guess = "2"
ureq = { version = "2.10", features = ["json", "tls"] }
axum-extra = { version = "0.9", features = ["multipart"] }
clap = { version = "4", features = ["derive"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
tempfile = "3"
qrcode = "0.14"

[dev-dependencies]
tokio-tungstenite = "0.21"
futures-util = "0.3"
